[ENG-3] add rating_count and average_rating to movie table
