# docs/api-docs/openapi-specification.yml
@@ -51,6 +51,51 @@ paths:
               schema:
                 $ref: '#/components/schemas/MovieListResponseDto'
           description: Successfully retrieved the list of movies
+
+  /api/v1/movies/{movieId}/ratings:
+    post:
+      operationId: rateMovie
+      summary: Rate a movie
+      description: Endpoint to rate a movie with a value between 1 and 10
+      tags:
+        - Movie
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: movieId
+          required: true
+          schema:
+            type: integer
+          description: ID of the movie to rate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RateMovieRequestDto'
+      responses:
+        "200":
+          description: Movie rated successfully
+    delete:
+      operationId: deleteMovieRating
+      summary: Delete a movie rating
+      description: Endpoint to delete a rating for a specific movie
+      tags:
+        - Movie
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: movieId
+          required: true
+          schema:
+            type: integer
+          description: ID of the movie to delete rating for
+      responses:
+        "200":
+          description: Movie rating deleted successfully
+
   /api/v1/users/register:
     post:
       operationId: registerUser
@@ -97,7 +142,6 @@ paths:
           description: Authentication failed
         "400":
           description: Bad request - Invalid input data
-
 
 components:
   securitySchemes:
@@ -189,3 +233,12 @@ components:
           maxLength: 100
           description: "Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, one number, and one special character"
       required: ["email", "password"]
+    RateMovieRequestDto:
+      type: object
+      properties:
+        value:
+          type: integer
+          minimum: 1
+          maximum: 10
+          example: 8
+      required: [ "value" ]
